--- a/src/components/FeeSelector/FeeSelector.css
+++ b/src/components/FeeSelector/FeeSelector.css
@@ -77,3 +77,25 @@
 .App.light .fee-selector-fee-button:disabled .fee-button-text {
   color: var(--base-02);
 }
+
+.loader {
+  width: 50px; /* control the size */
+  aspect-ratio: 1;
+  display: grid;
+  mask: conic-gradient(from 22deg, #0003, #000);
+  animation: load 1s steps(8) infinite;
+}
+.loader,
+.loader:before {
+  --_g: linear-gradient(#f0f0f0 0 0) 50%; /* update the color here */
+  background: 
+    var(--_g)/34% 8%  space no-repeat,
+    var(--_g)/8%  34% no-repeat space;
+}
+.loader:before {
+  content: "";
+  transform: rotate(45deg);
+}
+@keyframes load {
+  to { transform: rotate(1turn); }
+}
