--- a/src/components/FeeSelector/FeeSelector.css
+++ b/src/components/FeeSelector/FeeSelector.css
@@ -87,7 +87,7 @@
 }
 .loader,
 .loader:before {
-  --_g: linear-gradient(#f0f0f0 0 0) 50%; /* update the color here */
+  --_g: linear-gradient(#4d4d4d 0 0) 50%; /* update the color here */
   background: 
     var(--_g)/34% 8%  space no-repeat,
     var(--_g)/8%  34% no-repeat space;
