--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import 'fonts.css';
+
 html {
   min-height: 100vh;
   --blue: #007BB5;
@@ -40,7 +42,9 @@ html {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-size: cover;
   color: var(--app-font-color);
+  font-family: 'Futura';
 }
 
 .container {
